# py_canoe

./: .gitignore  404.html  LICENSE  LICENSE.txt  MANIFEST.in  Pipfile  README.md  SECURITY.md  _config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish_to_pypi.yml  pylint.yml  python-publish.yml
001_about/: index.html
002_prerequisites/: index.html
003_environment_setup/: index.html
004_usage/: index.html
999_reference/: index.html
docs/: 001_about.md  002_prerequisites.md  003_environment_setup.md  004_usage.md  999_reference.md  index.md  reference.md  src_manual.md
docs/_assets/: extra.css
py_canoe/: __init__.py  logging_collection.py  py_canoe.py  py_canoe_logger.py
py_canoe/py_canoe_utils/: logging_collection.py  py_canoe_logger.py
reference/: index.html
scripts/: build_wheel_package.bat  deploy_docs_to_github.bat  install_dependencies.bat  local_mkdoc_build.bat  run_pytests.bat  run_pytests_with_report.bat  upload_package_to_pypi.bat  venv_setup.bat  venv_setup_dev.bat  venv_setup_main.bat
search/: search_index.json
src/: __init__.py  __int__.py  py_canoe.py  py_canoe_old.py
src/py_canoe/: __init__.py  canoe.py  vtest.py
src/py_canoe/core/: application.py  bus.py  capl.py  configuration.py  environment.py  measurement.py  networks.py  performance.py  simulation.py  system.py  ui.py  version.py
src/py_canoe/core/child_elements/: application_model.py  application_model_file.py  application_model_files.py  application_model_setup.py  application_models.py  application_socket.py  application_specific_module.py  application_specific_modules.py  audio_interface.py  available_modules.py  basic_module.py  basic_modules.py  c_libraries.py  c_library.py  can_controller.py  capl_function.py  ccp_setup.py  channel.py  channels.py  communication_setup.py  compile_result.py  configured_channel.py  configured_channels.py  configured_module.py  configured_modules.py  connected_modules.py  data_source.py  data_source_file.py  databases.py  (+61 more)
src/py_canoe/helpers/: common.py
src/py_canoe/utils/: application.py  bus.py  capl.py  common.py  configuration.py  diagnostic.py  environment.py  events.py  measurement.py  networks.py  performance.py  simulation.py  system.py  ui.py  version.py
src/py_canoe_app/: application.py  py_canoe_logger.py
src/py_canoe_app/app_utils/: bus.py  capl.py  configuration.py  environment.py  measurement.py  networks.py  performance.py  simulation.py  system.py  ui.py  version.py
src/py_canoe_utils/: application.py  bus.py  capl.py  configuration.py  measurement.py  networks.py  py_canoe_logger.py  simulation.py
src/py_canoe_utils/app_utils/: bus.py  capl.py  configuration.py  environment.py  measurement.py  networks.py  performance.py  simulation.py  system.py  ui.py  version.py
src/utils/: __init__.py  application.py  bus.py  capl.py  configuration.py  environment.py  measurement.py  networks.py  performance.py  py_canoe_logger.py  simulation.py  system.py  ui.py  version.py
tests/: __int__.py  test_canoe.py  test_dummy_script.py  test_py_canoe.py
tests/demo_cfg/: demo.cfg  demo_can_one_ch.cfg  demo_can_two_ch.cfg  demo_conf_gen_db_setup.cfg  demo_dev.cfg  demo_diag.cfg  demo_eth_one_ch.cfg  demo_offline.cfg  demo_online_setup.cfg  demo_test_setup.cfg
tests/demo_cfg/CANdb/: easy.dbc
tests/demo_cfg/CDD/: UDS-ExampleEcu-5.0.2.cdd
tests/demo_cfg/Logs/: demo_log.blf
tests/demo_cfg/Nodes/: SimDiagECU.can  system_events.can  system_variables.can
tests/demo_cfg/Panels/: sys_var_demo_panel.xvp
tests/demo_cfg/TestNodes/: demo_test_environment.tse  demo_test_environment_001.tse  demo_test_environment_002.tse  demo_test_node_001.can  demo_test_node_002.can
(+15 files in other folders)
