[project]
name = "py_canoe"
version = "25.07.0"
description = "Python CANoe Package"
license = { text = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9, <=3.13"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["Vector", "CANoe", "py_canoe"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Embedded Systems"
]
dependencies = [
    "pywin32",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-xdist",
    "pytest-watch",
    "mkdocs-puml",
    "mkdocs-exclude",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/py_canoe"
repository = "https://github.com/chaitu-ycr/py_canoe"
documentation = "https://chaitu-ycr.github.io/py_canoe/"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
