[project]
name = "py_canoe"
version = "25.0.0"
description = "Python ðŸ Package for accessing Vector CANoe ðŸ›¶ Tool"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <=3.14"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["Vector", "CANoe", "Python","Test", "Automation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "pywin32",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-xdist",
    "pytest-watch",
    "mkdocs-puml",
    "mkdocs-exclude",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/py_canoe"
repository = "https://github.com/chaitu-ycr/py_canoe"
documentation = "https://chaitu-ycr.github.io/py_canoe/"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
